--- a/delivery.ipynb
+++ b/delivery.ipynb
@@ -744,7 +744,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -777,6 +779,53 @@
     "]\n",
     "\n",
     "plot_results(x, y_list, x_label, y_label, line_labels, plot_name='Custom simulation score (Hill Climbing)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3. Comparison\n",
+    "\n",
+    "The results below were obtained in the custom simulation file.\n",
+    "\n",
+    "Results for the genetic approach.\n",
+    "\n",
+    "| Selection Method | Crossover | Generational | Population Size | Mutation Rate | $\\mu$ score | $\\sigma$ score |\n",
+    "|------------------|-----------|--------------|-----------------|---------------|-------------|----------------|\n",
+    "| Tournament 1/3   | Order     | True         | 30              | 0.2           | 6635,17     | 138,26         |\n",
+    "| Roulette         | Order     | True         | 30              | 0.2           | 6313,33     | 67,45          |\n",
+    "| Roulette         | Order     | False        | 30              | 0.2           | 6626,17     | 124,13         |\n",
+    "| Tournament 1/2   | Order     | True         | 30              | 0.2           | 6571,83     | 106,14         |\n",
+    "| Tournament 1/3   | One Point | True         | 30              | 0.2           | 6616,00     | 129,71         |\n",
+    "| Tournament 1/3   | Order     | False        | 30              | 0.2           | 6586,00     | 166,81         |\n",
+    "| Tournament 1/3   | Order     | True         | 15              | 0.2           | 6639,33     | 91,29          |\n",
+    "| Tournament 1/3   | Order     | True         | 60              | 0.2           | 6648,17     | 130,75         |\n",
+    "| Tournament 1/3   | Order     | True         | 30              | 0.1           | 6460,50     | 64,92          |\n",
+    "| Tournament 1/3   | Order     | True         | 30              | 0.3           | 6807,50     | 141,81         |\n",
+    "\n",
+    "Results for simulated annealing.\n",
+    "\n",
+    "| Initial Temperature | Time Schedule | Neighbour Search | $\\mu$ score | $\\sigma$ score    |\n",
+    "|---------------------|---------------|------------------|---------|--------|\n",
+    "| 100000              | 0.99          | 50               | 7338,33 | 121,32 |\n",
+    "| 1000                | 0.99          | 50               | 7284,83 | 128,60 |\n",
+    "| 1000                | 0.9           | 50               | 7265,33 | 74,32  |\n",
+    "\n",
+    "Results for hill climbing.\n",
+    "\n",
+    "| Neighbour Search | $\\mu$ score | $\\sigma$ score    |\n",
+    "|------------------|---------|--------|\n",
+    "| 20               | 7256,83 | 140,18 |\n",
+    "\n",
+    "\n",
+    "The tests presented in the tables were run for the custom simulation with the cap time as 30 seconds. Longer tests are presented above in the document.\n",
+    "\n",
+    "With this, one can argue that local search algorithms give better results than the genetic ones. This is not true, as is illustrated in the other tests. The fact is that, for medium-sized problems, the probability of a local search algorithm getting stuck in a local optima is very low, which makes its initial boost faster than the genetic algorithm ones. All in all, comparisons must be only made between algorithms of the same kind.\n",
+    "\n",
+    "In the genetic algorithm section, the test that improved drastically from the base one (the first in the table), was the one with its mutation raised by 10 percentual points. This happens, once again, because in an initial scenario, when the number of better neighbours/mutations is still high, it can find these neighbours more easily. We are convicted that in the long run, such a high mutation rate would slow down the algorithm.\n",
+    "\n",
+    "In the local search algorithms, hill climbing had the worst average and standard deviation, that means the time used for testing was enough for simulated annealing to show its benefits in relation to local optima avoidance."
    ]
   }
  ],
